yamls/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  selector:
    matchLabels:
      app: alpine
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: alpine
        ports:
        - containerPort: 8080
        resources:
         requests:
           memory: "64Mi"
           cpu: "150m"
         limits:
           memory: "128Mi"
           cpu: "300m"
