yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpine-service
spec:
  type: ClusterIP
  selector:
    app: alpine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
