yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy-haproxy
    haproxy.org/path-rewrite: "/"
  name: nginx-ingress
  namespace: ic-ws-018
spec:
  rules:
   - http:
      paths:
      - path: /ic-ws-018
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
